--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: jekyllrb
 github_username:  jekyll
 
+permalink: /blog/:title
 # Build settings
 markdown: kramdown
 theme: minima
