เพิ่มส่วนการทดสอบ html ด้วย travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
   - jekyll build
   - htmlproofer ./_site --check-html
-
+  - java -jar vnu.jar --skip-non-html_site/
 env:
   global:
     -NOKOGIRI_USE_SYSTEM_LIBRARIES=true
